fix: add z-index 9 to nav to prevent navbar falling behind content

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ nav {
   padding: 0px 35px;
   backdrop-filter: blur(8px);
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
+  z-index: 9;
 }
 .logo.small {
   width: 200px;
